--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <h2 class="card-title">Trendy T-Shirt!</h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="card-actions justify-end">
-                            <button class="btn btn-primary">Buy Now</button>
+                            <button class="btn btn-neutral">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                         <h2 class="card-title">Formal Shirt!</h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="card-actions justify-end">
-                            <button class="btn btn-primary">Buy Now</button>
+                            <button class="btn btn-neutral">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -259,7 +259,7 @@
                         <h2 class="card-title">Casual Shirt!</h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="card-actions justify-end">
-                            <button class="btn btn-primary">Buy Now</button>
+                            <button class="btn btn-neutral">Buy Now</button>
                         </div>
                     </div>
                 </div>
@@ -275,7 +275,7 @@
                         <h2 class="card-title">Formal Shoe!</h2>
                         <p>If a dog chews shoes whose shoes does he choose?</p>
                         <div class="card-actions justify-end">
-                            <button class="btn btn-primary">Buy Now</button>
+                            <button class="btn btn-neutral">Buy Now</button>
                         </div>
                     </div>
                 </div>
